--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-  <div class="row">
-    <div class="col-sm-1 col-md-2 col-lg-2"></div>
-    <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8">
-      <div id ='root'></div>
-    </div>
-    <div class="col-sm-1 col-md-2 col-lg-2" >
-    </div>
-  </div>
+  <!-- <div style={width: "100%"} class="row"> -->
+    <!-- <div class="col-sm-1 col-md-2 col-lg-2"></div> -->
+    <!-- <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8"> -->
+      <div style={width: "100%"} id ='root'></div>
+    <!-- </div> -->
+    <!-- <div class="col-sm-1 col-md-2 col-lg-2" > -->
+    <!-- </div> -->
+  <!-- </div> -->
 
 <script src='/app.bundle.js'></script>
 </body>
