--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <title>Video Search</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
 </head>
 
-<body>
+<body style="background-color:#fffeea">
   <!-- <div style={width: "100%"} class="row"> -->
     <!-- <div class="col-sm-1 col-md-2 col-lg-2"></div> -->
     <!-- <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8"> -->
